Fix scroll out of view issue

--- a/static/index.css
+++ b/static/index.css
@@ -23,6 +23,7 @@ canvas {
     image-rendering: -moz-crisp-edges;    /* Firefox */
     image-rendering: -webkit-crisp-edges; /* Webkit (Safari) */
     image-rendering: pixelated;           /* Chrome */
+    outline:none;
 }
 
 /* MAIN PANEL */
